--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.16.5
 yarn_mappings=1.16.5+build.3
 loader_version=0.11.1
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=Alpha2
 maven_group=mbtw
 archives_base_name=mbtw
 # Dependencies
