--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx4G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.3
+yarn_mappings=1.16.5+build.4
 loader_version=0.11.1
 # Mod Properties
-mod_version=Alpha2
+mod_version=1.0.0-alpha.3
 maven_group=mbtw
 archives_base_name=mbtw
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.25.1+build.416-1.16
+fabric_version=0.30.3+1.16
