--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,13 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+repositories {
+    maven {
+        name = "dblsaiko"
+        url = "https://maven.dblsaiko.net/"
+    }
+}
+
 dependencies {
     //to change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
@@ -18,6 +25,18 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    // optional dev env annotation support
+    compileOnly "org.apiguardian:apiguardian-api:1.0.0"
+    compileOnly "com.google.code.findbugs:jsr305:3.0.2"
+
+    modApi ("grondag:frex-${project.mc_tag}:${project.frex_version}.+") { transitive = false}
+    // remove next line if you want JMX to be an optional dependency
+    include "grondag:frex-${project.mc_tag}:${project.frex_version}.+"
+
+    modImplementation ("grondag:jmx-${project.mc_tag}:${project.jmx_version}.+") { transitive = false}
+    // remove next line if you want JMX to be an optional dependency
+    include "grondag:jmx-${project.mc_tag}:${project.jmx_version}.+"
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
