--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,8 @@ archives_base_name=mbtw
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.30.3+1.16
+jmx_version=1.21
+
+frex_version=4.6
+
+mc_tag = mc116
