--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,19 @@
 org.gradle.jvmargs=-Xmx4G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.1
-yarn_mappings=1.18.1+build.2
-loader_version=0.12.11
+
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.3
+loader_version=0.13.3
+
 # Mod Properties
 mod_version=1.0.0-alpha.4
 maven_group=mbtw
 archives_base_name=mbtw
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.44.0+1.18
+#fabric_version=0.44.0+1.18
+fabric_version=0.51.0+1.18.2
 jmx_version=1.22
 
 mc_tag = mc118
