--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,21 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+org.gradle.parallel=true
 
+# Fabric Properties
+# check these on https://fabricmc.net/develop
 minecraft_version=1.19.3
 yarn_mappings=1.19.3+build.5
 loader_version=0.14.13
 
 # Mod Properties
-mod_version=1.0.0-alpha.4
-maven_group=mbtw
+mod_version=1.0.0-alpha.5
+maven_group=mbtw.mbtw
 archives_base_name=mbtw
+
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-#fabric_version=0.44.0+1.18
 fabric_version=0.73.0+1.19.3
+
+jmx_version=1.22
+
+mc_tag = mc119
