--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=23w07a
-yarn_mappings=23w07a+build.5
-loader_version=0.14.14
+minecraft_version=1.19.4-pre1
+yarn_mappings=1.19.4-pre1+build.2
+loader_version=0.14.15
 
 # Mod Properties
 mod_version=1.0.0-alpha.5
@@ -14,7 +14,7 @@ maven_group=mbtw.mbtw
 archives_base_name=mbtw
 
 # Dependencies
-fabric_version=0.74.1+1.19.4
+fabric_version=0.75.0+1.19.4
 
 jmx_version=1.22
 
